fix(gtk3.20: notebook): use $spacing for tabs' padding; closes #56

--- a/src/gtk-3.20/scss/widgets/_notebook.scss
+++ b/src/gtk-3.20/scss/widgets/_notebook.scss
@@ -31,7 +31,7 @@ notebook {
   }
 
   > header {
-    padding: 2px;
+    padding: $spacing;
     background-color: $bg_color;
 
     &.top {    box-shadow: inset  0  -1px $borders_color; }
@@ -45,7 +45,7 @@ notebook {
         padding-#{$_bpos}: 0;
 
         > tabs > tab {
-          padding: 2px 10px;
+          padding: $spacing $spacing + 8px;
           min-width: 20px;
           min-height: 20px;
 
